<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="8dp"
        android:text="Choose Position.."
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_tple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/top_left"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tprt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/top_right"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_bmlt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/bottom_left"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_bmrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:textAllCaps="true"
            android:text="@string/bottom_right"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />


    </LinearLayout>

</RelativeLayout>