<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_id">

    </com.google.android.gms.ads.AdView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bannerAdView"
        android:clickable="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-80dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoToGIF"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_video_gif"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/video_to_gif"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardImagesToGIF"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_images_gif"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/images_to_gif"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRow2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoToAudio"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_video_audio"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/video_to_audio"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoCutter"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="60dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_video_cutter"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/video_cutter"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRow4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoSlowMotion"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="90dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"

                                android:src="@mipmap/ic_fastandslow" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/slowMotion"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardWatermark"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:visibility="visible"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="70dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/water_mark"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/watermark_video"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRow3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardCaptureImage"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_capture_image"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/capture_image"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardGallery"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="50dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_gallery"
                                app:tint="@color/colorAccent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/gallery"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardFilter"
                        android:layout_width="160dp"
                        android:layout_height="140dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/effect"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|bottom"
                            android:padding="10dp"
                            android:text="@string/filter"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>