<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    tools:context=".fragments.VideoGifFragment">

    <FrameLayout
        android:id="@+id/relativeVideoGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:visibility="visible" />


        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <ImageView
            android:id="@+id/img_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/play"
            android:visibility="visible" />


    </FrameLayout>

    <ImageView
        android:id="@+id/img_pause"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/relativeVideoGif"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/pause"
        android:visibility="invisible" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_pause"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_preset"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/select_preset"
                    android:textColor="@color/colorBlack" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp">

                </androidx.appcompat.widget.AppCompatSpinner>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:id="@+id/relative_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_preset"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_framePreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/white_border"
                android:padding="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_imagePreview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/white_border"
                android:gravity="center"
                android:text="No Image Selected"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/relative_connvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_preview"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_showLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/white_border"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:text="@string/txt_selectposition"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_convert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/white_border"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/txt_convert"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>